# game-engine

./: .gitignore  .luarc.json  CMakeLists.txt  README.md  build.sh  clean.sh  game-engine-1.0.0-1.rockspec  run.sh
examples/holojam/: CMakeLists.txt  out.rres  out.rres.json
examples/holojam/mods/core-mod/: init.lua  main_menu.lua  manifest.json  settings_menu.lua
examples/holojam/mods/core-mod/animators/player/: idle.lua  init.lua  walk.lua
examples/holojam/mods/core-mod/components/: animator.lua  box_collider.lua  box_draw.lua  controllable.lua  follow.lua  position.lua  speed.lua  trigger.lua  velocity.lua
examples/holojam/mods/core-mod/styles/: blue.lua  red.lua
examples/holojam/mods/core-mod/systems/: box_draw_system.lua  collision_system.lua  draw_system.lua  follow_system.lua  input_system.lua  move_system.lua
examples/holojam/scenes/: CMakeLists.txt
examples/holojam/scenes/mod_scene/: CMakeLists.txt  mod_scene.c  mod_scene.h
examples/holojam/src/: main.c
examples/test-game/: CMakeLists.txt
examples/test-game/mods/core-mod/: init.lua  manifest.json
examples/test-game/mods/mod1/: init.lua  manifest.json
examples/test-game/scenes/main_menu/: CMakeLists.txt  main_menu.c  main_menu.h
examples/test-game/scenes/settings_menu/: CMakeLists.txt  settings_menu.c  settings_menu.h
examples/test-game/src/: main.c
include/: filetype.h  nuklear.h  raylib-nuklear.h  rres-raylib.h  rres.h
lua/: animation.lua  game-engine.lua  import.lua  include.lua  lfs.lua  logging.lua  nuklear.lua  raylib.lua  rtc_handler.lua
lua/concord/: utils.lua
src/: CMakeLists.txt
src/engine/: audio.c  audio.h  bindings.c  bindings.h  core.c  core.h  dmon.h  engine.c  engine.h  event.c  event.h  hooks.c  hooks.h  log.h  resource.c  resource.h  rtc_handler.c  rtc_handler.h  scene.c  scene.h
src/engine/platform/: platform.h  platform_linux.c  platform_linux.h  platform_web.c  platform_web.h  platform_windows.c  platform_windows.h
utils/: CMakeLists.txt  filetype.h  rres_dump.c  rres_pack.c
utils/windows/: getopt.h
